# daily-tasks-api-server

./: .env.example  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  license  main.py  pyproject.toml
daily_tasks_server/: main.py
daily_tasks_server/src/: __init__.py  app.py
daily_tasks_server/src/config/: .env.example  authentication.py  config.py  s3_service.py
daily_tasks_server/src/config/database/: __init__.py  database_interface.py  database_session.py
daily_tasks_server/src/controllers/auth/: activate_email_controller.py  change_password_controller.py  change_password_request_controller.py  login_user_controller.py  refresh_token_controller.py  signup_controller.py
daily_tasks_server/src/controllers/http/: router.py
daily_tasks_server/src/controllers/profile/: change_user_password_controller.py  update_user_avatar_controller.py
daily_tasks_server/src/controllers/project/: create_project_controller.py  delete_project_by_id_controller.py  get_project_by_id_controller.py  lst_projects_by_owner_controller.py  update_project_service.py
daily_tasks_server/src/entity/: __init__.py  entity.py  user.py
daily_tasks_server/src/middlewares/: logging.py
daily_tasks_server/src/models/: __init__.py
daily_tasks_server/src/services/: __init__.py
daily_tasks_server/src/templates/: change_password_confirmation.html  change_password_request.html
daily_tasks_server/src/utils/: hash_password.py
docker/: docker-compose.yaml
docker/backend/: Dockerfile
docker/database/: Dockerfile  create_todo_database.sql
(+52 files in other folders)
