[tool.poetry]
name = "daily-tasks-server"
version = "0.1.0"
description = ""
authors = ["Jean Santos <jeaanmichel@protonmail.com>"]
readme = "README.md"
packages = [{include = "daily_tasks_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2-binary = "^2.9.7"
bcrypt = "^4.0.1"
email-validator = "^2.0.0.post2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
